Changed Date Format

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,6 @@
 {
-  "appTitle": "Interns survey"
+  "appTitle": "Interns survey",
+  "traineeF": "Woman",
+  "traineeM": "Man",
+  "traineeX": "Other"
 }
