--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,3 +1,6 @@
 {
-  "appTitle": "Suivi des stagiaires"
+  "appTitle": "Suivi des stagiaires",
+  "traineeF": "Femme",
+  "traineeM": "Homme",
+  "traineeX": "Autre"
 }
